update: user profile api
