# Entities/Admin.go
@@ -63,13 +63,13 @@ func (userToAdd *Admin) GetUserByID() (*User, error) {
 		Email:             model.Email,
 		LastName:          model.LastName,
 		FirstName:         model.FirstName,
-		Profession:        &model.Profession.String,
-		JobTitle:          &model.JobTitle.String,
+		Profession:        model.Profession,
+		JobTitle:          model.JobTitle,
 		Education:         model.Education,
 		Certifications:    model.Certifications,
-		Employer:          &model.Employer.String,
-		Industry:          &model.Industry.String,
-		Location:          &model.Location.String,
+		Employer:          model.Employer,
+		Industry:          model.Industry,
+		Location:          model.Location,
 		Skills:            model.Skills,
 		ProfilePictureUrl: model.ProfilePictureUrl,
 		GraduationYear:    model.GraduationYear,
@@ -92,13 +92,13 @@ func (userToAdd *Admin) UpdateUserProfile(data *dtos.UpdateUserProfileCommandDat
 		Email:             account.Email,
 		LastName:          account.LastName,
 		FirstName:         account.FirstName,
-		Profession:        &account.Profession.String,
-		JobTitle:          &account.JobTitle.String,
+		Profession:        account.Profession,
+		JobTitle:          account.JobTitle,
 		Education:         account.Education,
 		Certifications:    account.Certifications,
-		Employer:          &account.Employer.String,
-		Industry:          &account.Industry.String,
-		Location:          &account.Location.String,
+		Employer:          account.Employer,
+		Industry:          account.Industry,
+		Location:          account.Location,
 		Skills:            account.Skills,
 		ProfilePictureUrl: account.ProfilePictureUrl,
 		GraduationYear:    account.GraduationYear,
