# Handlers/UpdateUserProfile.handler.go
@@ -10,6 +10,7 @@ import (
 	dtosRequest "github.com/datrine/alumni_business/Dtos/Request"
 	utils "github.com/datrine/alumni_business/Utils"
 	"github.com/gofiber/fiber/v2"
+	"github.com/golang-jwt/jwt/v5"
 )
 
 //var validate = validator.New(validator.WithRequiredStructEnabled())
@@ -44,17 +45,25 @@ func UpdateUserProfile(c *fiber.Ctx) error {
 		profession := c.FormValue("profession")
 		dobString := c.FormValue("dob")
 		profilePictureFile, err := c.FormFile("profile_picture")
+		var profilePictureUrl string = ""
 		if err != nil {
 			fmt.Printf(err.Error())
 		}
-		if _, err = profilePictureFile.Open(); err != nil {
+		if profilePictureFile != nil {
+			_, err = profilePictureFile.Open()
+			if err != nil {
+				fmt.Printf("B")
+				fmt.Printf(err.Error())
+			}
+			if err != nil {
+				fmt.Printf(err.Error())
+			}
+			profilePictureUrl, err = utils.UploadFile(profilePictureFile)
+			if err != nil {
+				fmt.Printf(err.Error())
+			}
+		}
 
-			fmt.Printf(err.Error())
-		}
-		profilePictureUrl, err := utils.UploadFile(profilePictureFile)
-		if err != nil {
-			fmt.Printf(err.Error())
-		}
 		dob, err := time.Parse("", dobString)
 		if err != nil {
 			fmt.Printf(err.Error())
@@ -63,18 +72,32 @@ func UpdateUserProfile(c *fiber.Ctx) error {
 			FirstName:         firstName,
 			LastName:          lastName,
 			ProfilePictureUrl: profilePictureUrl,
-			Profession:        &profession,
-			DOB:               &dob,
+		}
+		if !dob.IsZero() {
+			data.DOB = &dob
+		}
+		if profession != "" {
+			data.Profession = &profession
 		}
 		err = validate.Struct(data)
 		if err != nil {
-			return c.Status(fiber.ErrBadGateway.Code).JSON(&RegisterUserErrorResponse{
+			return c.Status(fiber.StatusBadGateway).JSON(&RegisterUserErrorResponse{
 				Message: err.Error(),
-				Status:  fiber.ErrBadGateway.Code,
+				Status:  fiber.StatusBadGateway,
 			})
 		}
-
+		user := c.Locals("user").(*jwt.Token)
+		claims := user.Claims.(jwt.MapClaims)
+		payload, ok := claims["sub"].(map[string]interface{})
+		if !ok {
+			return c.Status(401).JSON(&UpdateUserProfileErrorResponse{
+				Message: "Failed to complete user authentication",
+				Status:  401,
+			})
+		}
+		id := payload["ID"].(string)
 		entityUser, err := commands.UpdateUserProfile(&dtosCommand.UpdateUserProfileCommandData{
+			ID:                id,
 			FirstName:         data.FirstName,
 			LastName:          data.LastName,
 			Profession:        &profession,
@@ -82,19 +105,20 @@ func UpdateUserProfile(c *fiber.Ctx) error {
 		})
 
 		if err != nil {
-			return c.Status(fiber.ErrBadGateway.Code).JSON(&utils.DefaultErrorResponse{
+			return c.Status(fiber.StatusBadGateway).JSON(&utils.DefaultErrorResponse{
 				Message: err.Error(),
-				Status:  fiber.ErrBadGateway.Code,
+				Status:  fiber.StatusBadGateway,
 			})
 		}
-		return c.Status(fiber.StatusCreated).JSON(&UpdateUserProfileSuccessResponse{
+		return c.Status(fiber.StatusOK).JSON(&UpdateUserProfileSuccessResponse{
 			Message: "Profile updated successfully",
-			Code:    fiber.StatusCreated,
+			Code:    fiber.StatusOK,
 			Data: &UpdateUserProfileResponseData{
 				ID:                entityUser.ID,
 				FirstName:         entityUser.FirstName,
 				LastName:          entityUser.LastName,
 				ProfilePictureUrl: entityUser.ProfilePictureUrl,
+				Profession:        *entityUser.Profession,
 			},
 		})
 	}
@@ -102,10 +126,12 @@ func UpdateUserProfile(c *fiber.Ctx) error {
 }
 
 type UpdateUserProfileResponseData struct {
-	ID                string `json:"id"`
-	FirstName         string `json:"first_name,omitempty"`
-	LastName          string `json:"last_name,omitempty"`
-	ProfilePictureUrl string `json:"profile_picture_url,omitempty"`
+	ID                string    `json:"id"`
+	FirstName         string    `json:"first_name"`
+	LastName          string    `json:"last_name"`
+	ProfilePictureUrl string    `json:"profile_picture_url"`
+	Profession        string    `json:"profession"`
+	DOB               time.Time `json:"dob"`
 }
 
 type UpdateUserProfileSuccessResponse struct {
